# setup.cfg
[metadata]
name = myRIO_library
version = attr: myRIO_library.version.__version__
author = Aitzol Ezeiza Ramos
author_email = aitzol.ezeiza@ehu.eus
keywords = myRIO, NI, National Instruments, LabVIEW, Python, FPGA, Real-Time, Embedded Systems

# add a description of your package
description = A library to control the myRIO board from National Instruments
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/AitzolEzeizaUPVEHU/myRIO_library
download_url = https://github.com/AitzolEzeizaUPVEHU/myRIO_library/archive/refs/heads/main.zip

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.5

[options]
install_requires =
    # list the dependencies required by your package
    nifpga >=22.0.0
    requests >=2.18.4
    idna<3,>=2.5
    certifi>=2017.4.17
    urllib3<1.27,>=1.21.1
    chardet<5,>=3.0.2
    future >=1.0.0


python_requires = >=3.5