# setup.cfg
[metadata]
name = myrio_library
version = attr: myrio_library.version.__version__
author = Aitzol Ezeiza Ramos
author_email = aitzol.ezeiza@ehu.eus
keywords = myRIO, NI, National Instruments, LabVIEW, Python, FPGA, Real-Time, Embedded Systems

# add a description of your package
description = A library to control the myRIO board from National Instruments
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/AitzolEzeizaUPVEHU/myRIO_library
download_url = https://github.com/AitzolEzeizaUPVEHU/myRIO_library/archive/refs/heads/main.zip

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.5

[options]
install_requires =
    # list the dependencies required by your package
    nifpga >=22.0.0
    future >=1.0.0
    Flask >=1.1.4 
    Jinja2 >=2.11.3 
    Werkzeug >=1.0.1 
    click >=7.1.2 
    itsdangerous >=1.1.0
    MarkupSafe>=0.23
    Waitress >=1.4.0
    requests >=2.25.1

python_requires = >=3.5
